src/apps/Altinn.AccessManagement/deploy/environments/at22/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-management
spec:
  selector:
  template:
    spec:
      containers:
        - name: access-management
