src/apps/Altinn.AccessManagement/deploy/environments/at22/httproute-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: access-management
spec:
  hostnames:
    - authorization.at22.dis-core.altinn.cloud
